* Fixed gap in video pages

--- a/visualization/src/assets/css/videoPages.css
+++ b/visualization/src/assets/css/videoPages.css
@@ -65,7 +65,6 @@
   width: 2070px;
   height: 2160px;
   position: relative;
-  margin: 10px;
   display: none;
   border-radius: 79px;
   overflow: hidden;
